--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Progate</title>
-    <link rel="stylesheet" type="text/css" href="https://kanyou-reapra.github.io/kanyou.github.io/stylesheet.css">
-    <link rel="stylesheet" type="text/css" href="https://kanyou-reapra.github.io/kanyou.github.io/responsive.css">
+    <link rel="stylesheet" type="text/css" href="https://kanyou-reapra.github.io/kanyou.github.io/stylesheet.css" />
+    <link rel="stylesheet" type="text/css" href="https://kanyou-reapra.github.io/kanyou.github.io/responsive.css" />
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
   </head>
   <body>
